# webby

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
include/: webby.hpp
include/handlers/: file_handler.hpp  rest_handler.hpp
include/net/: socket.hpp
include/webby/: config.hpp  error.hpp  method.hpp  request.hpp  response.hpp  router.hpp  server.hpp  utility.hpp
include/webby/strategy/: single.hpp
test/: main.cpp
